K8S/auth_example2/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-test
spec:
  tls:
    - hosts:
      - arch.homework
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for arch.homework
      secretName: test-tls-secret
  rules:
    - host: arch.homework
      http:
        paths:
        - path: /
          backend:
            # This assumes http-svc exists and routes to healthy endpoints
            serviceName: http-svc
            servicePort: 80
